chore(git): adding gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,20 @@ bower_components/
 .sass-cache/
 .tmp/
 dist/
+*~
+#*#
+.#*
+.*.swp
+.DS_Store
+*.ipr
+*.iml
+.idea
+.classpath
+.project
+.settings
+.sass-cache
+.tmp
+node_modules
+bower_components
+dist
+reports
